# rust-debezium-postgres

./: .env  Cargo.toml  README.md  connector.json  docker-compose.yaml  pg.conf  script.sh
scripts/: README.md  connector.create.json  connector.update.json  create.sh  update.sh
scripts/migrations/: 20231206100011_cashflow.down.sql  20231206100011_cashflow.up.sql
src/: main.rs
