[package]
edition = "2021"
name = "rust-debezium-postgres"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = {version = "0.36", features = ["cmake-build"]}
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }

